using UnityEngine;

/// <summary>
/// Drop on a GameObject that also has any <see cref="ITriggerable"/> (SceneTransition,
/// CutsceneAction, …). On player interact (raycast → E) it forwards the Interactor's
/// GameObject to the triggerable. One trigger component, any number of action types.
/// </summary>
[AddComponentMenu("Triggers/Interactable Trigger")]
public class InteractableTrigger : MonoBehaviour, IInteractable
{
    [Tooltip("Optional. If unset, the first ITriggerable on this GameObject is used.")]
    [SerializeField] private MonoBehaviour triggerableOverride;

    private ITriggerable cached;

    private void Awake()
    {
        cached = ResolveTriggerable();
    }

    public bool CanInteract()
    {
        var t = cached ?? ResolveTriggerable();
        // Use the player root as a CanInteract probe — the actual initiator is supplied
        // by Interact(). This is a hover-time check, so a missing initiator just means
        // "can in principle"; the real eligibility check happens in Trigger().
        return t != null;
    }

    public void Interact(Interactor interactor)
    {
        if (interactor == null) return;
        var t = cached ?? ResolveTriggerable();
        if (t == null) return;
        if (!t.CanTrigger(interactor.gameObject)) return;
        t.Trigger(interactor.gameObject);
    }

    private ITriggerable ResolveTriggerable()
    {
        if (triggerableOverride is ITriggerable explicitT) return explicitT;
        return GetComponent<ITriggerable>();
    }
}
